fix: add Bearer token authentication support for mobile app (#522)
* Update mobile UI components and configuration

- Enhanced member and stat card components with improved styling
- Updated dashboard screen layout and functionality
- Added haptics support for better user interaction
- Configured Xcode scheme for mobile build

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* Implement authentication and user service enhancements

- Updated user routes API with improved authentication flow
- Enhanced test coverage for auth algorithms and feature flags
- Added comprehensive legal and user verification testing
- Introduced new Java-based user service with Spring Boot
- Implemented user profile, feature flag, and legal models
- Added repository layer for data access patterns
- Created service layer for business logic separation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* Update service URLs and API routes for mobile app deployment

- Change backend service discovery from clanboards.local to webapp.local
- Update mobile app dev URLs to use staging deployment endpoints
- Align user service API route from /user to /users for consistency
- Fix mobile auth store API calls to match backend user service routes

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* feat: enhance user service error handling and mobile client error parsing

- Add custom exception classes (UnauthorizedException, ForbiddenException, ValidationException, ServiceException)
- Enhance GlobalExceptionHandler with structured JSON error responses including error codes, user messages, field information, and request context
- Add comprehensive logging across all controllers with client IP, user agent, and detailed error context
- Improve UserController with better validation for player tags and meaningful error messages
- Enhance AuthCont